test/Fail/Issue958b.err
Issue958b.agda:18.10-13: error: [UnequalTerms]
IsFunctor !=< map fun
when checking that the expression fun has type map fun
